<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="about">About</string>
    <string name="app_name">MSLogger</string>
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="preferences">Preferences</string>
    <string name="app_settings">Application Settings</string>
	<string name="megasquirt">Megasquirt</string>
	<string name="hertz">Hertz</string>
	<string name="quit">Quit</string>
	<string name="connecting_to_ms">Connecting to MS…</string>
	<string name="connected_to_ms">Connected to MS…</string>
	<string name="logging">Logging data</string>
	<string name="disconnected_from_ms">Disconnected from MegaSquirt</string>
	<string name="unknown">Unknown State!</string>
	<string name="map_sensor">MAP Sensor</string>
	<string name="ego_sensor">EGO Sensor</string>
	<string name="temp_unit">Temperature Unit</string>
	<string name="choose_bluetooth_device">Choose Bluetooth Device</string>
	<string name="bluetooth_device">Bluetooth device</string>
	<string name="data_log_directory">Data Log Directory</string>
	<string name="mslogger_is_running">MSLogger is running</string>
	<string name="logging_to">Logging to %s</string>
	<string name="calibrate_tps">Calibrate TPS</string>
	<string name="reset_gauges">Reset Gauges</string>
	<string name="connect">Connect</string>
	<string name="disconnect">Disconnect</string>
	<string name="please_select">Please select your Bluetooth device in Preferences</string>
	<string name="enable_gauge_edit">Enable Gauge Editing</string>
	<string name="edit_gauges_instructions">You can double tap on any indicator to edit its details. You can also drag an indicator onto another to change their positions.</string>
	<string name="disable_gauge_edit">Disable Gauge Editing</string>
	<string name="autoconnect">Enable auto-connect</string>
	<string name="autoconnect_summary">Automatically manage the connection to the ECU</string>
	<string name="autolog">Enable auto-logging</string>
	<string name="autolog_summary">Automatically start logging whenever we have a connection to the ECU</string>

    <string name="autoemail_autosend">Enable auto-send</string>
    <string name="autoemail_autosend_summary">Enables sending the log file to an email address of your choosing.</string>
    <string name="autoemail_sendto">An email address</string>
    <string name="autoemail_target">Target email address</string>
    <string name="autoemail_target_summary">Where to email the log file</string>
    <string name="gauges_orientation">Gauges orientation</string>
            
    <string name="email_body">Logfiles generated by MSLogger.</string>
	        
    <string name="email_subject">MSLogger files %tc</string>
	        
    <string name="about_text">An application to log information from Megasquirt ECUs.\n\nWritten By:\nDave Smith &lt;dave.g.smith@gmail.com&gt;\nSébastien Giroux</string>
	        
    <!-- Buttons -->
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_reset">Reset</string>
    <string name="bt_close">Close</string>
    
    <string name="no_bt">Bluetooth is not available on your Android device.  You won\'t be able to connect to a Megasquirt ECU.</string>
	<string name="no_comms">Cannot connect to your ECU.  Check that it is powered up and the Bluetooth adapter is working</string>
    <string name="title_paired_devices">Paired Devices</string>
	<string name="title_other_devices">Other Devices</string>
	<string name="button_scan">Scan</string>       
	<string name="none_paired">No paired devices</string>
	<string name="scanning">Scanning…</string>
	<string name="select_device">Select Device</string>
	<string name="none_found">None found</string>
	<string name="please_wait">Please Wait</string>
	<string name="identifying">Identifying your ECU</string>
	<string name="unrecognised_ecu">I don\'t recognise your ECU, would you like to email the developer about this?</string>
	<string name="log_level">Logging level</string>
	<string name="log_directory">Log directory</string>
	<string name="manage_datalogs">Manage Datalogs</string>
	
	<!-- Indicator -->
	<string name="gauge">Gauge</string>
	<string name="histogram">Histogram</string>
	<string name="bargraph">Bar Graph</string>
	<string name="numeric_indicator">Numeric Indicator</string>
	<string name="table_indicator">Table Indicator</string>
	
	<!-- Edit gauge -->
	<string name="edit_gauge_title">Edit Gauge Properties</string>
	<string name="channel">Channel</string>
	<string name="indicatorDetailsEdit">Indicator Position</string>
	<string name="choose_indicator_position">Choose which Indicator Position to Edit</string>
	<string name="choose_indicator_channel">Choose the Indicator Channel</string>
	<string name="indicator_orientation">Orientation</string>
	<string name="choose_indicator_orientation">Choose the Indicator Orientation</string>
	<string name="indicator_type">Gauge Type</string>
	<string name="choose_indicator_type">Choose an Indicator Type</string>
	<string name="offset_angle">Offset Angle</string>
	<string name="label_decimal_places">Label Decimal Places</string>
	<string name="value_decimal_places">Value Decimal Places</string>	
	<string name="high_danger">High Danger</string>
	<string name="high_warning">High Warning</string>
	<string name="low_warning">Low Warning</string>
	<string name="low_danger">Low Danger</string>
	<string name="max_value">Max Value</string>
	<string name="min_value">Min Value</string>
	<string name="name">Name</string>
	<string name="title">Title</string>
	<string name="units">Units</string>
	<string name="horizontal">Horizontal</string>
	<string name="vertical">Vertical</string>
	
	<string name="indicatorFirst">First</string>
	<string name="indicatorSecond">Second</string>
	<string name="indicatorThird">Third</string>
	<string name="indicatorFourth">Fourth</string>
	<string name="indicatorFifth">Fifth</string>
	<string name="indicatorSixth">Sixth</string>
	<string name="indicatorSeventh">Seventh</string>
	<string name="indicatorEighth">Eighth</string>
	<string name="indicatorNinth">Ninth</string>
	<string name="indicatorTenth">Tenth</string>
	
	<!-- View Datalog -->
	<string name="datalog_viewer_title">Datalog Viewer</string>
	<string name="select_fields_to_view">Select Fields to View</string>
	<string name="filter_datalog_fields">Filter datalog fields…</string>
	<string name="log_viewer">Log Viewer</string>
	<string name="scatter_plot">Scatter Plot</string>
	<string name="x_axis">X Axis:</string>
	<string name="y_axis">Y Axis:</string>
	<string name="z_axis">Z Axis:</string>
	<string name="choose_x_axis_datalog_field">Choose the X axis datalog field</string>
	<string name="choose_y_axis_datalog_field">Choose the Y axis datalog field</string>
	<string name="choose_z_axis_datalog_field">Choose the Z axis datalog field</string>
	<string name="bt_generate">Generate</string>
	<string name="choose_axis_and_generate">Choose a datalog field for the X, Y and Z axis and click the \"Generate\" button.</string>
	
	<!-- Manage Datalogs -->
	<string name="manage_datalogs_title">Manage Datalogs</string>
	<string name="no_datalog_found">It looks like MSLogger haven\'t saved any datalog yet. You can connect to a Megasquirt ECU, start datalogging and come back here after.</string>
	<string name="view">View</string>
	<string name="email">Email</string>
	<string name="delete">Delete</string>
	
	<!-- Tuning -->
	<string name="tuning">Tuning</string>
	<string name="tuning_section">Select a tuning section below:</string>
	<string name="power_cycle_required">Power Cycle Required!</string>
	
	<!-- Edit Table / Edit Curve -->
	<string name="bt_burn">Burn</string>
	
	<!-- Required Fuel -->
	<string name="required_fuel_calculator">Required Fuel Calculator</string>
	
	<string name="engine_displacement">Engine Displacement</string>
	<string name="number_of_cylinders">Number of Cylinders</string>
	<string name="injector_flow">Injector Flow</string>
	<string name="air_fuel_ratio">Air-Fuel Ratio</string>
	
	<string name="CID">CID</string>
	<string name="CC">CC</string>
	<string name="lb_hr">lb/hr</string>
	<string name="cc_min">cc/min</string>
	
	<string name="required_fuel_button">Required Fuel…</string>
	<string name="ms">(ms)</string>
	<string name="gps">GPS</string>
	<string name="useexternal">Enable external GPS</string>
	<string name="useexternal_summary">Use an external/remote GPS device instead of the inbuilt GPS</string>
	<string name="usedevicetime">Add device time to log</string>
	<string name="usedevicetime_summary">Include device time for every log event (better accuarcy than ECU)</string>	
	<string name="externalgpsactive">Connect to GPS</string>	
	
	<!--  Edit Properties -->
	<string name="properties">Properties</string>
	<string name="edit_properties">Edit Properties</string>
	<string name="other_flags">Other Flags</string>
	
	<!--  SD Card Console -->
	<string name="ms3_sd_console">MS3 SD Console</string>
	<string name="download">Download</string>
	<string name="no_sd_card">No SD card currently inserted</string>
	<string name="manage_sd_card">Manage SD card</string>
	
	<!-- SD Card Datalog Field Selector -->
	<string name="select_one">&gt;</string>
	<string name="select_all">&gt;&gt;</string>
	<string name="deselect_one">&lt;</string>
	<string name="deselect_all">&lt;&lt;</string>
	<string name="available_datalog_fields">Available Datalog Fields</string>
	<string name="selected_datalog_fields">Selected Datalog Fields</string>
	
	<!-- Calibrate TPS -->
	<string name="maximum_value">Maximum Value</string>
	<string name="minimum_value">Minimum Value</string>
	<string name="current_value">Current Value</string>
	<string name="confirm">Confirm</string>
	<string name="calibrate_tps_default_value">127</string>
</resources>
