<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/megasquirt" android:key="MSSettings">
        <uk.org.smithfamily.mslogger.widgets.BluetoothDevicePreference
            android:dialogTitle="@string/choose_bluetooth_device"
            android:key="bluetooth_mac"
            android:title="@string/bluetooth_device" />
        <ListPreference
            android:entries="@array/mapnames"
            android:entryValues="@array/maptypes"
            android:key="maptype"
            android:title="@string/map_sensor" />

        <ListPreference
            android:defaultValue="CELSIUS"
            android:entries="@array/tempent"
            android:entryValues="@array/tempvalues"
            android:key="temptype"
            android:title="@string/temp_unit" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/gps">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="useexternal"
            android:summary="@string/useexternal_summary"
            android:title="@string/useexternal" />
        <uk.org.smithfamily.mslogger.widgets.BluetoothDevicePreference
            android:dialogTitle="Choose Bluetooth Device"
            android:key="gps_bluetooth_mac"
            android:title="@string/bluetooth_device" 
            android:dependency="useexternal"/>
        <CheckBoxPreference
            android:defaultValue="off"
            android:key="externalgpsactive"
            android:title="@string/externalgpsactive" 
            android:dependency="useexternal"/>
        <CheckBoxPreference 
            android:defaultValue="true"
            android:key="usedevicetime"
            android:summary="@string/usedevicetime_summary"
            android:title="@string/usedevicetime"/>
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/app_settings">
        <EditTextPreference
            android:defaultValue="@string/app_name"
            android:dialogTitle="@string/data_log_directory"
            android:key="DataDir"
            android:title="@string/log_directory" />

        <CheckBoxPreference
            android:key="autoemail_enabled"
            android:summary="@string/autoemail_autosend_summary"
            android:title="@string/autoemail_autosend" />

        <EditTextPreference
            android:dialogTitle="@string/autoemail_target"
            android:hint="@string/autoemail_sendto"
            android:inputType="textEmailAddress"
            android:key="autoemail_target"
            android:summary="@string/autoemail_target_summary"
            android:title="@string/autoemail_target" 
            android:dependency="autoemail_enabled"/>

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autoconnect"
            android:summary="@string/autoconnect_summary"
            android:title="@string/autoconnect" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autolog"
            android:summary="@string/autolog_summary"
            android:title="@string/autolog" />
        
        <ListPreference
            android:defaultValue="FOLLOW_DEVICE"
            android:entries="@array/gaugesorientationnames"
            android:entryValues="@array/gaugesorientationvalues"
            android:key="gaugesorientation"
            android:title="@string/gauges_orientation" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Debug">
          <ListPreference
            android:entries="@array/levelnames"
            android:entryValues="@array/levelvalues"
            android:defaultValue="6"
            android:key="loglevel"
            android:title="@string/log_level" />
    </PreferenceCategory>

</PreferenceScreen>