<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/app_settings" >

        <CheckBoxPreference
            android:key="autoemail_enabled"
            android:defaultValue="true"
            android:summary="@string/autoemail_autosend_summary"
            android:title="@string/autoemail_autosend" />

        <EditTextPreference
            android:dialogTitle="@string/autoemail_target"
            android:hint="@string/autoemail_sendto"
            android:inputType="textEmailAddress"
            android:key="autoemail_target"
            android:summary="@string/autoemail_target_summary"
            android:title="@string/autoemail_target" 
            android:dependency="autoemail_enabled" />
    </PreferenceCategory>

</PreferenceScreen>