<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5">
            
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_datalog_fields" />
        

        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
     </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
   	    android:layout_height="wrap_content"
   	    android:orientation="vertical"
   	    android:layout_weight="0.2">
   	 	
        <Button
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_all"
            android:layout_gravity="center" />
            
        <Button
            android:id="@+id/select_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_one"
            android:layout_gravity="center" />
        
        <Button
            android:id="@+id/deselect_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deselect_one"
            android:layout_gravity="center" />  
            
        <Button
            android:id="@+id/deselect_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deselect_all"
            android:layout_gravity="center" />  
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.5">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_datalog_fields" />
        
        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
     </LinearLayout>
    
</LinearLayout>