<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
   	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

	     <TextView
	         android:id="@+id/datalogs_info"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:textAppearance="?android:attr/textAppearanceMedium"
	         android:layout_margin="6dip" />	</LinearLayout>
	
   	<View android:layout_height="2dip" android:layout_width="fill_parent"
		android:background="#FF909090" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" />
	
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1" />

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <Button
	        android:id="@+id/view"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/view" />

	    <Button
	        android:id="@+id/send_by_email"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/email" />

	    <Button
	        android:id="@+id/delete"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/delete" />
	</LinearLayout>

</LinearLayout>